# CV_credit_scoring_and_NLP

./: .gitignore  README.md  pyproject.toml
src/: bot_structure.py
